	  determine the existence of the term. The fix is to use an explicit "contains" check.
	  Also removed the try with the "#" separator as we are now only using "/".
	  A 404 is returned now as well.
	  This is fixed in HtmlDispatcher.dispatchTerm() which is currently the only place where
	  term URIs are being resolved.  See issue #100: "term URI always resolved in HTML"
	  
	  
2009-03-14:
	- The following kind URI was accepted as valid:
	       http://mmisw.org/ont/mmi/badversion/someVocab/someTerm
	  Fixed.  See MmiUri public constructor and MmiUriTest.testVersionInvalid2().
	  
	  
	- Completed review of MmiUri and simplification of constructor and operations.
	  In particular, the "extension" concept has been re-worked; now, the extension is
	  provided by getExtension() (instead of getTopicExtension(), which has been removed).
	  This extension can be specified in the topic component (as before) but also in the
	  term component, for example:
	      http://mmisw.org/ont/mmi/someVocab/someTerm.owl
	  But now, the extension is NOT included in any of the query operations, except, of course
	  getExtension() itself. In general, the extension is to be used just as a way to help determine
	  the output format desired by the requester. 
	  Note also that the ontology URIs are never stored in the database with any extension.
	  
	- Fixed issue #51: "Fix unversioned HTML to be unversioned".
	
	
2009-03-13:
	- working on issue 51: "Fix unversioned HTML to be unversioned", in concrete the problem
	  I described in today's comment.
	
	
2009-03-03
	Resuming work on issue 62: unversioned terms not resolving 
	http://code.google.com/p/mmisw/issues/detail?id=62&sort=priority
	
	- adding some more log information
	- MmiUri.getOntologyUri() was not honoring its documentation that says only the
	  URI for the ontology is returned (not including the term, if any). However, this was
	  not proporly guaranteed. Fixed.
	
	
2008-12-29   0.2.0.beta3 (20081229)